--- a/client/src/styles/SmallPostItem.scss
+++ b/client/src/styles/SmallPostItem.scss
@@ -1,8 +1,39 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 .col > img {
+  object-fit: fill; /* Do not scale the image */
   object-position: center; /* Center the image within the element */
   width: 100%;
-  max-height: 250px;
+  height: 250px;
   margin-bottom: 1rem;
+  border-radius: 30px;
+  transition: all .5s;
+}
+
+.parent:hover .col > img,
+.parent:focus .col > img {
+  transform: scale(1.2);
+}
+
+.col > img::before {
+  content: "";
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(52, 73, 94, 0.75);
+}
+
+.parent:hover .col > img:before,
+.parent:focus .col > img:before {
+  display: block;
+}
+
+span {
+  color: white;
+  font-family: sans-serif;
+  padding: 25%;
+  position: absolute;
 }
