--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -6,8 +6,8 @@
   justify-content: space-between;
   padding: 10px;
   margin-bottom: 10px;
-  background-color: rgb(244, 244, 244);
-  border-bottom: 2px rgb(223, 223, 223) solid;
+  // background-color: rgb(244, 244, 244);
+  // border-bottom: 2px rgb(223, 223, 223) solid;
 }
 
 .nav-bar-item {
@@ -20,7 +20,7 @@
 }
 
 .nav-bar-item > img {
-  height: 3em;
+  height: 4em;
 }
 
 .btn {
