--- a/client/src/styles/createPost.scss
+++ b/client/src/styles/createPost.scss
@@ -1,1 +1,38 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+.create-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 75px;
+  width: 100%;
+  height: 500px;
+}
+
+.create-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.create-form > input {
+  margin-bottom: 3px;
+}
+
+.create-map {
+  margin-right: 1em;
+}
+
+.create-enrty {
+  height: 250px;
+  width: 100%;
+}
+
+.create-right {
+  width: 33%;
+  margin-top: 2em;
+  margin-left: 1em;
+}
+
+.create-title {
+  width: 33%;
+}
