--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -29,5 +29,17 @@
 }
 
 .search-bar {
+  display: block;
   width: 300px;
+}
+.search-suggestions {
+  position: absolute;
+  z-index: 1000;
+  border: 3px solid black;
+  padding: 5px;
+  width: 300px;
+  list-style: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
