--- a/client/src/styles/createPost.scss
+++ b/client/src/styles/createPost.scss
@@ -1,5 +1,10 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
+.parallax {
+  width: 100%;
+  height: 100%;
+}
+
 .create-page {
   display: flex;
   flex-direction: row;
@@ -20,6 +25,7 @@
 
 .create-map {
   margin-right: 1em;
+  margin-bottom: 3px;
 }
 
 .create-enrty {
