--- a/client/src/styles/createPost.scss
+++ b/client/src/styles/createPost.scss
@@ -10,8 +10,13 @@
   flex-direction: row;
   justify-content: center;
   margin-top: 125px;
-  width: 100%;
-  height: 500px;
+  padding: 75px;
+  margin-left: 15%;
+  margin-right: 15%;
+  width: 70%;
+  height: auto;
+  background-color: antiquewhite;
+  border-radius: 10px;
 }
 
 .create-form {
