added button to navbar, made tweaks to landing page

--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -43,11 +43,16 @@
   background: transparent;
   border: none;
   border-bottom: 2px solid #efefef;
-
+  color: white;
 }
 
 .search-bar::placeholder {
   color: rgba(255, 255, 255, 0.818);
+}
+
+.search-bar:focus {
+  outline: none;
+  border:1px solid rgb(188, 188, 188);
 }
 
 .search-suggestions {
