changed search bar css

--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -43,14 +43,20 @@
 
 .search-bar {
   display: block;
-  width: 400px;
-  height: 2.5em;
-  border: 3px solid grey;
-  border-radius: 10px;
+  width: 300px;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid #efefef;
+  color: white;
 }
 
 .search-bar::placeholder {
   color: rgba(255, 255, 255, 0.818);
+}
+
+.search-bar:focus {
+  outline: none;
+  border:1px solid rgb(188, 188, 188);
 }
 
 .search-bar:focus {
