--- a/client/src/styles/IndividualPostPage.scss
+++ b/client/src/styles/IndividualPostPage.scss
@@ -9,7 +9,7 @@ section {
 
 #left {
   padding-top: 20px;
-  padding-right: 0%;
+  padding-right: 20px;
   padding-left: 0%;
 }
 
@@ -24,3 +24,21 @@ section {
   width: 100%;
   height: 100%;
 }
+
+h2 {
+  text-align: left;
+}
+
+.userid {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+#user {
+  padding-right: 5px;
+}
+
+.post-content-container {
+  padding-top: 2em;
+}
+
