--- a/client/src/styles/IndividualPostPage.scss
+++ b/client/src/styles/IndividualPostPage.scss
@@ -17,7 +17,7 @@ section {
   background-color: #f4f4f4;
   width: 500px;
   padding: 20px;
-  height: 100vh;
+  height: 100%;
 }
 
 .photos>img {
@@ -47,6 +47,7 @@ h2 {
   border-radius: 10px;
   background-color: #e2e2e2;
   padding: 10px;
+  margin-bottom: 5em;
 }
 
 .rating {
@@ -56,9 +57,62 @@ h2 {
 
 .weather {
   padding-top: 15px;
-  font-size: 13px;
+  font-size: 14px;
   margin-top: 15px;
   margin-bottom: 15px;
-  border-radius: 15px;
   padding: 1em;
+  color: #499167;
+  border-bottom: solid 1px #e2e2e2;
+}
+
+.weather > span {
+  font-weight: bold;
+}
+
+.comment-box {
+  width: 100%;
+  height: 33px;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid #545454;
+  resize: none;
+}
+
+.comment-box:focus {
+  outline: none;
+  border-bottom: 3px solid #545454;
+}
+
+.comment-box::placeholder {
+  font-size: 15px;
+}
+
+.comment-button {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.ant-btn {
+  background-color: #499167;
+  box-shadow: none;
+  border-radius: 16px;
+}
+
+.ant-btn > button:hover {
+  background-color: #33673B;
+}
+
+.comments {
+  margin-top: 20px;
+
+}
+
+.comments > p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#commenter {
+  font-weight: bold;
+  font-size: 15px;
 }
