--- a/client/src/styles/IndividualPostPage.scss
+++ b/client/src/styles/IndividualPostPage.scss
@@ -69,6 +69,22 @@ h2 {
   font-weight: bold;
 }
 
+.likes {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-bottom: solid 1px #e2e2e2;
+}
+
+.likes > h4 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.likes > h4 > button {
+  border: none;
+  background-color: transparent;
+}
+
 .comment-box {
   width: 100%;
   height: 33px;
